--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/zhw2590582/sleepy#readme",
   "devDependencies": {
-    "@zeit/next-sass": "^1.0.1",
+    "babel-plugin-styled-components": "^1.10.0",
     "next": "^8.0.3",
-    "node-sass": "^4.11.0"
+    "styled-components": "^4.1.3"
   },
   "dependencies": {
     "react": "^16.8.4",
