--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/zhw2590582/sleepy#readme",
   "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "next": "^8.0.3",
     "styled-components": "^4.1.3"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
