--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "homepage": "https://github.com/zhw2590582/sleepy#readme",
   "devDependencies": {
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "autoprefixer": "^9.5.0",
     "babel-plugin-styled-components": "^1.10.0",
     "next": "^8.0.3",
+    "node-sass": "^4.11.0",
     "styled-components": "^4.1.3"
   },
   "dependencies": {
