--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "I am sleepy, talk about later.",
   "scripts": {
-    "start": "next",
+    "start": "./node_modules/.bin/next",
     "create:cname": "touch docs/CNAME && echo \"sleepy.im\" >> docs/CNAME",
-    "build": "next build && next export -o docs && touch docs/.nojekyll && npm run create:cname"
+    "build": "./node_modules/.bin/next build && ./node_modules/.bin/next export -o docs && touch docs/.nojekyll && npm run create:cname"
   },
   "repository": {
     "type": "git",
@@ -18,14 +18,16 @@
     "url": "https://github.com/zhw2590582/sleepy/issues"
   },
   "homepage": "https://github.com/zhw2590582/sleepy#readme",
-  "dependencies": {
+  "devDependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^9.5.0",
     "babel-plugin-styled-components": "^1.10.0",
     "next": "^8.0.3",
     "node-sass": "^4.11.0",
-    "styled-components": "^4.1.3",
+    "styled-components": "^4.1.3"
+  },
+  "dependencies": {
     "dayjs": "^1.8.11",
     "get-github-issue": "^1.0.3",
     "github-markdown-css": "^3.0.1",
