--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,3 @@
 {
-    "presets": ["next/babel"],
-    "plugins": [
-        ["styled-components", {
-            "ssr": true
-        }]
-    ]
+    "presets": ["next/babel"]
 }
