--- a/package.json
+++ b/package.json
@@ -18,16 +18,15 @@
     "url": "https://github.com/zhw2590582/sleepy/issues"
   },
   "homepage": "https://github.com/zhw2590582/sleepy#readme",
-  "dependencies": {
+  "devDependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^9.5.0",
-    "babel-plugin-styled-components": "^1.10.0",
     "next": "^8.0.3",
-    "node-sass": "^4.11.0",
-    "styled-components": "^4.1.3",
+    "node-sass": "^4.11.0"
+  },
+  "dependencies": {
     "dayjs": "^1.8.11",
-    "get-github-issue": "^1.0.3",
     "github-markdown-css": "^3.0.1",
     "gitting": "^1.1.4",
     "normalize.css": "^8.0.1",
