--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mobx-react": "^5.4.3",
     "normalize.css": "^8.0.1",
     "react": "^16.8.4",
+    "react-color": "^2.17.0",
     "react-content-loader": "^4.2.1",
     "react-dom": "^16.8.4"
   }
