--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dayjs": "^1.8.11",
     "github-markdown-css": "^3.0.1",
     "gitting": "^2.0.7",
+    "medium-zoom": "^1.0.4",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "normalize.css": "^8.0.1",
